# rvc_wrapper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
AICoverGen/: .gitignore
src/: __init__.py  main.py  mdx.py  rmvpe.py  rvc.py  vc_infer_pipeline.py
src/extract/: mdx_process.py
src/extract/audio/: enums.py  helpers.py  paths.py
src/extract/integrations/youtube/: extract_yt_audio.py
src/transform/: enums.py  mdx_process.py  paths.py  process_factory.py  spleeter_process.py
