[tool.poetry]
name = "rvc-wrapper"
version = "0.1.0"
description = ""
authors = ["ddot-bit <dpuducay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg = "^1.4"
requests = "^2.31.0"
gradio = "3.39.0"
librosa = "^0.10.1"
sox = "^1.4.1"
yt-dlp = "^2023.11.16"
pedalboard = "^0.8.7"
onnxruntime = "^1.16.3"
torch = "^2.1.2"
ffmpeg-python = "^0.2.0"
tqdm = "^4.66.1"
swig = "^4.1.1.post1"
fairseq = "^0.12.2"
faiss-cpu = "1.7.0"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
